<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ed98e088"
    android:soundEffectsEnabled="false">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/main"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:id="@+id/mb1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainImage"
        android:text="@string/play"/>
    <Button
        android:id="@+id/mb2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mb1"
        android:text="@string/help"/>
    <Button
        android:id="@+id/mb3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mb2"
        android:text="@string/exit"/>



</RelativeLayout>
